# cell-data-generator

./: .gitignore  Cargo.toml  README.md
account-cell-type-generator/: Cargo.toml
account-cell-type-generator/src/: main.rs
config-cell-type-generator/: Cargo.toml  record_key_namespace.txt  reserved_accounts.txt
config-cell-type-generator/src/: constants.rs  main.rs  util.rs
data/: char_set_emoji.txt  char_set_emoji_removed.txt  char_set_jp.txt  char_set_ko.txt  char_set_ru.txt  char_set_th.txt  char_set_th_removed.txt  char_set_tr.txt  char_set_vi.txt  new_to_update.txt  preserved_accounts.txt  record_key_namespace.txt  reserved_accounts.txt  sub_account_beta_list.txt  unavailable_account_hashes.txt
raw-reserved-accounts/: external.md  missing.md
reserved-account-combiner/: Cargo.toml
reserved-account-combiner/src/: main.rs
src/: main.rs  util.rs
wallet-cell-type-generator/: Cargo.toml
wallet-cell-type-generator/src/: main.rs
