[package]
name = "account-cell-type-generator"
version = "0.1.0"
authors = ["Link <xieaolin@gmail.com>"]
edition = "2018"

[features]
dev = []
local = []
testnet2 = []
testnet3 = []
testnet = ["testnet2", "testnet3"]
mainnet = []

[dependencies]
ckb-hash = "0.40.0"
das-types = { path = "../../das-types/rust", features = ["std"] }
faster-hex = "0.5.0"
