[package]
name = "account-cell-type-generator"
version = "0.1.0"
authors = ["Link <xieaolin@gmail.com>"]
edition = "2018"

[features]
dev = []
local = []
testnet2 = []
testnet3 = []
testnet = ["testnet2", "testnet3"]
mainnet = []

[dependencies]
ckb-hash = "0.104"
das-types-std = { path = "../../das-types-std/rust" }
faster-hex = "0.5.0"
