[package]
name = "config-cell-type-generator"
version = "0.2.1"
authors = ["Link <xieaolin@gmail.com>"]
edition = "2018"

[features]
dev = []
local = []
testnet2 = []
testnet3 = []
testnet = ["testnet2", "testnet3"]
mainnet = []

[dependencies]
blake2b-ref = "0.3"
ckb-hash = "=0.105.1"
das-types-std = { path = "../../das-types-std/rust" }
faster-hex = "0.6.1"
chrono = { version = "0.4" }
hex = "0.4.2"
