[package]
name = "reserved-account-combiner"
version = "0.1.0"
authors = ["Link <link@blockabc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
hex = "0.4"
ckb-hash = "0.104"
regex = "1.5.4"
